setup up project

--- a/lab1/lab1report.tex
+++ b/lab1/lab1report.tex
@@ -62,7 +62,7 @@
 	
 	\section{Materials and Pre-Lab}
 	
-	Prelab consisted of getting assigned lab equipment (assigned locker \#5). Gathered all relevant materials listed below. 
+	Prelab consisted of getting assigned lab equipment (assigned locker \\texttt{}#5). Gathered all relevant materials listed below. 
 	No preliminary calculations were necessary for this lab. 
 	
 	\begin{itemize}
